force-app/main/default/objects/Audit_Trail_Config__mdt/Audit_Trail_Config__mdt.object-meta.xml
<CustomObject>
    <label>Audit Trail Config</label>
    <pluralLabel>Audit Trail Configs</pluralLabel>
</CustomObject>