force-app/main/default/objects/Audit_Trail_Config__mdt/fields/Additional_Email_CC__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_CC__c</fullName>
    <label>Additional Email CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>