force-app/main/default/objects/Audit_Trail_Config__mdt/fields/Case_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Queue_Id__c</fullName>
    <label>Case Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>