force-app/main/default/objects/Audit_Trail_Config__mdt/fields/Last_Run_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Timestamp__c</fullName>
    <label>Last Run Timestamp</label>
    <type>DateTime</type>
</CustomField>